--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "mobile-booster-website",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "vite": "^5.3.3"
   },
