--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vite": "^5.3.3"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1"
   }
 }
